modifique la ventana modal de la medialuna y el titulo de historia

--- a/pages/historia.html
+++ b/pages/historia.html
@@ -44,7 +44,7 @@
     </header>
     <main>
         <section class="container">
-            <h2 class="display-2 text-center">Nuestra Historia</h2>
+            <h2 class="display-2 text-center text-primary">Nuestra Historia</h2>
             <hr>
             <div class="card mb-3 border-0">
                 <div class="row g-0">
