modifique la el tamaño de la imagen de la pagina detalleProducto

--- a/pages/detalleProducto.html
+++ b/pages/detalleProducto.html
@@ -54,8 +54,14 @@
           </nav>
             <h2 class="display-2 text-center">Pan Brioche</h2>
             <hr>
-            <div class="clearfix">
-                <img src="../img/productos/Brioche-larga-oscura_00059_portfolio1.jpg" class="col-md-6 float-md-start mb-3 me-md-3 img-fluid" alt="...">
+            <section class="mb-3">
+              <div class="imgDetalleProducto float-md-start me-3">
+                <img
+                  src="../img/productos/Brioche-larga-oscura_00059_portfolio1.jpg"
+                  alt="Pan Brioche"
+                  class="w-100 rounded-3"
+                />
+              </div>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos nisi incidunt atque consectetur libero cupiditate impedit ipsum
                      blanditiis perspiciatis amet voluptas, repellendus, facilis doloremque quo eius praesentium harum consequuntur. Corporis in 
                      temporibus, ea amet, eos dolore, architecto facilis exercitationem nisi explicabo voluptas ab! Ullam fugiat dolorum accusamus 
@@ -91,9 +97,9 @@
                      sapiente cum officiis fuga saepe earum corporis illum repellendus. Doloremque distinctio magnam fugiat iste voluptatibus, voluptatem perferendis 
                      voluptates dolore facere deleniti vitae eius in commodi! Laborum veniam nihil laudantium. Est, dolorum.
                 </p>
-            </div>
+            </section>
             
-            <div class="alert alert-primary" role="alert">
+            <div class="alert alert-primary" role="alert"><i class="bi bi-coin"></i> 
               Semana de descuentos, llevá 3 al valor de 2
             </div>
 
