--- a/pages/detalleProducto.html
+++ b/pages/detalleProducto.html
@@ -106,7 +106,7 @@
         </section>
 
     </main>
-    <footer class="bg-dark text-secondary py-3">
+    <footer class="bg-dark-subtle text-white py-3">
         <section class="container">
           <article class="row">
             <aside class="col-12 col-md-4 text-center">
@@ -122,9 +122,9 @@
             <aside class="col-12 col-md-4 ">
               <h5>Seguinos en nuestras redes</h5>
               <div class="text-center text-md-start">
-                <a href="error.html" class="text-secondary"><i class="bi bi-whatsapp fs-5" ></i></a></i>
-                <a href="error.html" class="text-secondary mx-2"><i class="bi bi-instagram fs-5"></i></a></i>
-                <a href="error.html" class="text-secondary"><i class="bi bi-facebook fs-5"></i></a>
+                <a href="error.html" class="text-white"><i class="bi bi-whatsapp fs-5" ></i></a></i>
+                <a href="error.html" class="text-white mx-2"><i class="bi bi-instagram fs-5"></i></a></i>
+                <a href="error.html" class="text-white"><i class="bi bi-facebook fs-5"></i></a>
                 
               </div>
               
